kubernetes files/kubernetes-dashboard-node-port-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-dashboard-node-port-service
  namespace: kubernetes-dashboard
spec:
  type: NodePort
  selector:
    k8s-app: kubernetes-dashboard
  ports:
    - port: 8443
      targetPort: 8443
      nodePort: 30000
